# cpp-init

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectSettings.cmake
res/: CMakeLists.txt  CMakeListsLibrary.txt  CMakeSettings_.json
res/cmake/: ProjectSettings.cmake  libConfig.cmake.in
res/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
res/examples/: CMakeLists.txt
res/lib/: CMakeLists.txt  CMakeListsHeaderOnly.txt
res/lib/include/dir/: export.h
res/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
